// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render properly with danger variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ WLqQm"
  >
    <div
      class="sc-gsTCUz kdZmDy"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Message
      </span>
    </div>
    <div
      class="sc-jSgupP gcdruo"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with info variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ WLqQm"
  >
    <div
      class="sc-gsTCUz kdZmDy"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Message
      </span>
    </div>
    <div
      class="sc-jSgupP oHkxX"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with success variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ WLqQm"
  >
    <div
      class="sc-gsTCUz kdZmDy"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Message
      </span>
    </div>
    <div
      class="sc-jSgupP jMXQTc"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with warning variant 1`] = `
<div>
  <div
    class="sc-bdfBwQ WLqQm"
  >
    <div
      class="sc-gsTCUz kdZmDy"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Message
      </span>
    </div>
    <div
      class="sc-jSgupP kCtqeW"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render title and message text 1`] = `
<div>
  <div
    class="sc-bdfBwQ WLqQm"
  >
    <div
      class="sc-gsTCUz kdZmDy"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-iBPRYJ cZbdhE"
      >
        Message
      </span>
    </div>
    <div
      class="sc-jSgupP jMXQTc"
    />
    <div
      class="sc-gKsewC kBjPyY"
    >
      X
    </div>
  </div>
</div>
`;
